--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,16 +1,129 @@
-html,
+h1 {
+    text-align: center;
+    font-size: 45px;
+    color: white !important;
+}
+
+h2 {
+    color: white !important;
+    text-align: center !important;
+}
+
+h3 {
+    font-size: 16px !important;
+    text-align: center !important;
+}
+  
 body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+    background-color: #154854;
+    font-family: Georgia, serif;
+}
+  
+a.mylink {
+    color: #333333;
+}
+  
+label {
+    color: white !important;
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
+.link {
+    color: white !important;
 }
 
-* {
-  box-sizing: border-box;
+.learn-more-button {
+    background-color: #154854 !important;
+    color: white !important;
+}
+
+p {
+    text-align: center;
+    color: white;
+    font-size: 20px;
+}
+
+.form-inline {
+    display: flex;
+    flex-flow: row wrap;
+    align-items: center;
+}
+
+.form-inline label {
+    display: block;
+    text-align: center;
+    color: white;
+    font-size: 20px;
+    margin: 5px 10px 5px 0;
+    font-family: Georgia, serif;
+}
+
+.form-inline input {
+    font-size: 20px;
+    vertical-align: middle;
+    margin: 5px 10px 5px 0;
+    font-family: Georgia, serif;
+}
+
+button {
+    padding: 10px 20px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    border-radius: 15px;
+    background-color: #655e5d;
+    color: white;
+    cursor: pointer;
+    font-family: Georgia, serif;
+    font-size: 20px;
+}
+
+@media (max-width: 800px) {
+    .form-inline input {
+      margin: 10px 0;
+    }
+    
+    .form-inline {
+      flex-direction: column;
+      align-items: stretch;
+    }
+}
+
+img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    max-width:100%;
+    height: auto;
+}
+
+/*option {
+    font-size: 20px;
+    font-family: Georgia, serif;
+  }
+  select {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 240px;
+    height: 37px;
+  }*/
+.myfooter {
+    background-color: #363636;
+    padding: 3rem 1.5rem 2.8rem;
+}
+
+.facebook {
+    color: #ffffff;
+}
+
+.facebook:hover {
+    color: #ffffff;
+}
+
+.twitter {
+    color: #ffffff;
+}
+
+.twitter:hover {
+    color: #ffffff;
 }
